--- a/src/app/address-book/address-book.component.html
+++ b/src/app/address-book/address-book.component.html
@@ -36,7 +36,7 @@
                 />
               </svg>
             </button>
-            <button class="svg">
+            <button class="svg" (click)="deleteAddress(item.id)">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 viewBox="0 0 24 24"
