--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -3,7 +3,7 @@
   <div class="container mx-auto flex justify-between items-center">
     <div class="flex item-center">
       <div class="p-2">
-        <img />
+        <img src="../assets/images/addressbook.jpg" />
       </div>
       <div>
         <div>
