Added edit function and edit toggle container

--- a/src/app/address-book/address-book.component.css
+++ b/src/app/address-book/address-book.component.css
@@ -18,3 +18,10 @@
   padding: 4px;
   color: #658292;
 }
+.toggle {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  width: 60%;
+  transform: translate(-50%, -50%);
+}
