--- a/src/app/address-book/address-book.component.html
+++ b/src/app/address-book/address-book.component.html
@@ -1,58 +1,84 @@
-<app-nav-bar></app-nav-bar>
-<app-search-bar></app-search-bar>
+<div [ngStyle]="{ filter: toggle == true ? 'blur(2px)' : 'blur(0)' }">
+  <app-nav-bar></app-nav-bar>
+  <app-search-bar></app-search-bar>
 
-<div class="container mx-auto">
-  <div class="flex flex-col">
-    <!-- Table header -->
-    <div class="grid grid-cols-6 head">
-      <div class="px-4 py-2 text-left">Fullname</div>
-      <div class="px-4 py-2 text-left">Address</div>
-      <div class="px-4 py-2 text-left">City</div>
-      <div class="px-4 py-2 text-left">State</div>
-      <div class="px-4 py-2 text-left">Zip Code</div>
-      <div class="px-4 py-2 text-left">Phone Number</div>
-    </div>
+  <div class="container mx-auto">
+    <div class="flex flex-col">
+      <!-- Table header -->
+      <div class="grid grid-cols-6 head">
+        <div class="px-4 py-2 text-left">Fullname</div>
+        <div class="px-4 py-2 text-left">Address</div>
+        <div class="px-4 py-2 text-left">City</div>
+        <div class="px-4 py-2 text-left">State</div>
+        <div class="px-4 py-2 text-left">Zip Code</div>
+        <div class="px-4 py-2 text-left">Phone Number</div>
+      </div>
 
-    <!-- Table body -->
-    <ng-container *ngFor="let item of data">
-      <div class="grid grid-cols-6 table hover:shadow-xl">
-        <div class="px-4 py-4">{{ item.fullName }}</div>
-        <div class="px-4 py-4">{{ item.address }}</div>
-        <div class="px-4 py-4">{{ item.city }}</div>
-        <div class="px-4 py-4">{{ item.state }}</div>
-        <div class="px-4 py-4">{{ item.zipCode }}</div>
-        <div class="px-4 py-4 flex justify-between">
-          {{ item.phoneNumber }}
-          <div class="flex">
-            <button class="svg">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 0 24 24"
-                fill="currentColor"
-                class="w-4 h-4"
+      <!-- Table body -->
+      <ng-container *ngFor="let item of data">
+        <div class="grid grid-cols-6 table hover:shadow-xl">
+          <div class="px-4 py-4">{{ item.fullName }}</div>
+          <div class="px-4 py-4">{{ item.address }}</div>
+          <div class="px-4 py-4">{{ item.city }}</div>
+          <div class="px-4 py-4">{{ item.state }}</div>
+          <div class="px-4 py-4">{{ item.zipCode }}</div>
+          <div class="px-4 py-4 flex justify-between">
+            {{ item.phoneNumber }}
+            <div class="flex">
+              <div></div>
+              <button
+                class="svg"
+                (click)="toggleAddressEditer()"
+                (click)="getID(item.id)"
               >
-                <path
-                  d="M21.731 2.269a2.625 2.625 0 0 0-3.712 0l-1.157 1.157 3.712 3.712 1.157-1.157a2.625 2.625 0 0 0 0-3.712ZM19.513 8.199l-3.712-3.712-12.15 12.15a5.25 5.25 0 0 0-1.32 2.214l-.8 2.685a.75.75 0 0 0 .933.933l2.685-.8a5.25 5.25 0 0 0 2.214-1.32L19.513 8.2Z"
-                />
-              </svg>
-            </button>
-            <button class="svg" (click)="deleteAddress(item.id)">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 0 24 24"
-                fill="currentColor"
-                class="w-4 h-4"
-              >
-                <path
-                  fill-rule="evenodd"
-                  d="M16.5 4.478v.227a48.816 48.816 0 0 1 3.878.512.75.75 0 1 1-.256 1.478l-.209-.035-1.005 13.07a3 3 0 0 1-2.991 2.77H8.084a3 3 0 0 1-2.991-2.77L4.087 6.66l-.209.035a.75.75 0 0 1-.256-1.478A48.567 48.567 0 0 1 7.5 4.705v-.227c0-1.564 1.213-2.9 2.816-2.951a52.662 52.662 0 0 1 3.369 0c1.603.051 2.815 1.387 2.815 2.951Zm-6.136-1.452a51.196 51.196 0 0 1 3.273 0C14.39 3.05 15 3.684 15 4.478v.113a49.488 49.488 0 0 0-6 0v-.113c0-.794.609-1.428 1.364-1.452Zm-.355 5.945a.75.75 0 1 0-1.5.058l.347 9a.75.75 0 1 0 1.499-.058l-.346-9Zm5.48.058a.75.75 0 1 0-1.498-.058l-.347 9a.75.75 0 0 0 1.5.058l.345-9Z"
-                  clip-rule="evenodd"
-                />
-              </svg>
-            </button>
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 24 24"
+                  fill="currentColor"
+                  class="w-4 h-4"
+                >
+                  <path
+                    d="M21.731 2.269a2.625 2.625 0 0 0-3.712 0l-1.157 1.157 3.712 3.712 1.157-1.157a2.625 2.625 0 0 0 0-3.712ZM19.513 8.199l-3.712-3.712-12.15 12.15a5.25 5.25 0 0 0-1.32 2.214l-.8 2.685a.75.75 0 0 0 .933.933l2.685-.8a5.25 5.25 0 0 0 2.214-1.32L19.513 8.2Z"
+                  />
+                </svg>
+              </button>
+              <button class="svg" (click)="deleteAddress(item.id)">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 24 24"
+                  fill="currentColor"
+                  class="w-4 h-4"
+                >
+                  <path
+                    fill-rule="evenodd"
+                    d="M16.5 4.478v.227a48.816 48.816 0 0 1 3.878.512.75.75 0 1 1-.256 1.478l-.209-.035-1.005 13.07a3 3 0 0 1-2.991 2.77H8.084a3 3 0 0 1-2.991-2.77L4.087 6.66l-.209.035a.75.75 0 0 1-.256-1.478A48.567 48.567 0 0 1 7.5 4.705v-.227c0-1.564 1.213-2.9 2.816-2.951a52.662 52.662 0 0 1 3.369 0c1.603.051 2.815 1.387 2.815 2.951Zm-6.136-1.452a51.196 51.196 0 0 1 3.273 0C14.39 3.05 15 3.684 15 4.478v.113a49.488 49.488 0 0 0-6 0v-.113c0-.794.609-1.428 1.364-1.452Zm-.355 5.945a.75.75 0 1 0-1.5.058l.347 9a.75.75 0 1 0 1.499-.058l-.346-9Zm5.48.058a.75.75 0 1 0-1.498-.058l-.347 9a.75.75 0 0 0 1.5.058l.345-9Z"
+                    clip-rule="evenodd"
+                  />
+                </svg>
+              </button>
+            </div>
           </div>
         </div>
-      </div>
-    </ng-container>
+      </ng-container>
+    </div>
   </div>
+</div>
+<div *ngIf="toggle" class="toggle">
+  <button (click)="toggleAddressEditer()">
+    <svg
+      xmlns="http://www.w3.org/2000/svg"
+      viewBox="0 0 24 24"
+      fill="currentColor"
+      class="w-8 h-8 svg-toggle"
+    >
+      <path
+        fill-rule="evenodd"
+        d="M12 2.25c-5.385 0-9.75 4.365-9.75 9.75s4.365 9.75 9.75 9.75 9.75-4.365 9.75-9.75S17.385 2.25 12 2.25Zm-1.72 6.97a.75.75 0 1 0-1.06 1.06L10.94 12l-1.72 1.72a.75.75 0 1 0 1.06 1.06L12 13.06l1.72 1.72a.75.75 0 1 0 1.06-1.06L13.06 12l1.72-1.72a.75.75 0 1 0-1.06-1.06L12 10.94l-1.72-1.72Z"
+        clip-rule="evenodd"
+      />
+    </svg>
+  </button>
+  <app-edit-address-book
+    [addressId]="selectedAddressId"
+  ></app-edit-address-book>
 </div>
