--- a/src/app/address-book/address-book.component.html
+++ b/src/app/address-book/address-book.component.html
@@ -64,7 +64,7 @@
   </div>
 </div>
 <div *ngIf="toggle" class="toggle">
-  <button (click)="toggleAddressEditer()">
+  <!-- <button (click)="toggleAddressEditer()">
     <svg
       xmlns="http://www.w3.org/2000/svg"
       viewBox="0 0 24 24"
@@ -77,7 +77,7 @@
         clip-rule="evenodd"
       />
     </svg>
-  </button>
+  </button> -->
   <app-edit-address-book
     [addressId]="selectedAddressId"
   ></app-edit-address-book>
