--- a/src/app/edit-address-book/edit-address-book.component.html
+++ b/src/app/edit-address-book/edit-address-book.component.html
@@ -6,7 +6,7 @@
         <h1 class="h1">PERSON ADDRESS FORM</h1>
       </div>
       <div>
-        <button class="buttonSvg">
+        <button class="buttonSvg" (click)="reloadToHome()">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             viewBox="0 0 24 24"
@@ -40,18 +40,24 @@
           <label>City</label>
           <select formControlName="city">
             <option value="volvo">Select City</option>
-            <option value="saab">Saab</option>
-            <option value="mercedes">Mercedes</option>
-            <option value="audi">Audi</option>
+            <option value="saab">Chennai</option>
+            <option value="mercedes">Pune</option>
+            <option value="audi">Munbai</option>
+            <option value="saab">Bengaluru</option>
+            <option value="mercedes">Tirupati</option>
+            <option value="audi">Lucknow</option>
           </select>
         </div>
         <div>
           <label>State</label>
           <select formControlName="state">
-            <option value="volvo">Select State</option>
-            <option value="saab">Saab</option>
-            <option value="mercedes">Mercedes</option>
-            <option value="audi">Audi</option>
+            <option value="volvo">Andhra Pradesh.</option>
+            <option value="saab">Assam</option>
+            <option value="mercedes">Bihar</option>
+            <option value="audi">Gujarat</option>
+            <option value="mercedes">Haryana</option>
+            <option value="audi">Goa</option>
+            <option value="audi">Tamil Nadu</option>
           </select>
         </div>
         <div>
@@ -63,7 +69,7 @@
         <div></div>
         <div>
           <button class="button w-32 add" (click)="editAddress()">Add</button>
-          <button class="button w-32">Reset</button>
+          <button class="button w-32 reset">Reset</button>
         </div>
       </div>
     </form>
